# shuriken

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/modules/: FindASIOSDK.cmake
src/: CMakeLists.txt  JuceHeader.h  README_JuceLibraryCode.txt  akaifilehandler.cpp  audioanalyser.cpp  audiofilehandler.cpp  directoryvalidator.cpp  exportdialog.cpp  exportdialog.h  globals.cpp  globals.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowfilehandling.cpp  nsmlistenerthread.cpp  offlinetimestretcher.cpp  optionsdialog.cpp  optionsdialog.h  rubberbandaudiosource.cpp  shurikensampler.cpp  shurikensampler.h  signallistener.cpp  signallistener.h  simplesynth.h  slicepointitem.h  textfilehandler.cpp  waveformitem.cpp  waveformitem.h  wavegraphicsscene.cpp  wavegraphicsscene.h  wavegraphicsview.cpp  wavegraphicsview.h  workspace.code-workspace
src/Graffik_Legacy/: skinneddial.cpp  skinneddial.h
src/JUCECustom/: CMakeLists.txt  JUCEUtils.cmake
src/JUCECustom/modules/: AppConfig.h  JuceHeader.h
src/JUCECustom/modules/juce_audio_devices_jackmidi/: juce_audio_devices_jackmidi.cpp  juce_audio_devices_jackmidi.h  juce_audio_devices_jackmidi.mm
src/JUCECustom/modules/juce_audio_devices_jackmidi/audio_io/: juce_AudioDeviceManager.h
src/JUCECustom/modules/juce_audio_devices_jackmidi/native/: juce_linux_Midi.cpp
src/JUCECustom/replacements/: AppConfig.h  CMakeLists.txt.juce_core
src/JUCECustom/replacements/juce_audio_devices/: juce_audio_devices.cpp
src/JUCECustom/replacements/juce_audio_devices/audio_io/: juce_AudioDeviceManager.cpp  juce_AudioIODevice.cpp  juce_AudioIODevice.h
src/JUCECustom/replacements/juce_audio_devices/native/: juce_linux_JackAudio.cpp
src/JUCECustom/replacements/juce_core/: juce_core.h
src/SndLibShuriken/: CMakeLists.txt  io.c  unix-config.h
