add_subdirectory(SndLibShuriken)

# `target_sources` adds source files to a target. We pass the target that needs the sources as the
# first argument, then a visibility parameter for the sources which should normally be PRIVATE.
# Finally, we supply a list of source files that will be built into the target. This is a standard
# CMake command.

target_sources(shuriken
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/Graffik_Legacy/basiceventfilter.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Graffik_Legacy/skinneddial.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/mainwindow.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/wavegraphicsview.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/waveformitem.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/optionsdialog.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/audiofilehandler.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/sampleraudiosource.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/shurikensampler.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/slicepointitem.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/commands.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/rubberbandaudiosource.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/audioanalyser.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/globals.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/helpform.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/applygaindialog.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/directoryvalidator.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/signallistener.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/applygainrampdialog.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/zipper.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/aboutdialog.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/exportdialog.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/messageboxes.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/textfilehandler.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/akaifilehandler.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/midifilehandler.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/mainwindowfilehandling.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/confirmbpmdialog.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/offlinetimestretcher.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/wavegraphicsscene.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/nsmlistenerthread.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/jackoutputsdialog.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/sampleutils.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/calcbpmdialog.cpp

        ${CMAKE_CURRENT_SOURCE_DIR}/Graffik_Legacy/basiceventfilter.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Graffik_Legacy/skinneddial.h
        ${CMAKE_CURRENT_SOURCE_DIR}/mainwindow.h
        ${CMAKE_CURRENT_SOURCE_DIR}/wavegraphicsview.h
        ${CMAKE_CURRENT_SOURCE_DIR}/waveformitem.h
        ${CMAKE_CURRENT_SOURCE_DIR}/optionsdialog.h
        ${CMAKE_CURRENT_SOURCE_DIR}/audiofilehandler.h
        ${CMAKE_CURRENT_SOURCE_DIR}/samplebuffer.h
        ${CMAKE_CURRENT_SOURCE_DIR}/sampleraudiosource.h
        ${CMAKE_CURRENT_SOURCE_DIR}/shurikensampler.h
        ${CMAKE_CURRENT_SOURCE_DIR}/slicepointitem.h
        ${CMAKE_CURRENT_SOURCE_DIR}/commands.h
        ${CMAKE_CURRENT_SOURCE_DIR}/simplesynth.h
        ${CMAKE_CURRENT_SOURCE_DIR}/globals.h
        ${CMAKE_CURRENT_SOURCE_DIR}/rubberbandaudiosource.h
        ${CMAKE_CURRENT_SOURCE_DIR}/audioanalyser.h
        ${CMAKE_CURRENT_SOURCE_DIR}/helpform.h
        ${CMAKE_CURRENT_SOURCE_DIR}/applygaindialog.h
        ${CMAKE_CURRENT_SOURCE_DIR}/directoryvalidator.h
        ${CMAKE_CURRENT_SOURCE_DIR}/signallistener.h
        ${CMAKE_CURRENT_SOURCE_DIR}/applygainrampdialog.h
        ${CMAKE_CURRENT_SOURCE_DIR}/zipper.h
        ${CMAKE_CURRENT_SOURCE_DIR}/aboutdialog.h
        ${CMAKE_CURRENT_SOURCE_DIR}/exportdialog.h
        ${CMAKE_CURRENT_SOURCE_DIR}/messageboxes.h
        ${CMAKE_CURRENT_SOURCE_DIR}/textfilehandler.h
        ${CMAKE_CURRENT_SOURCE_DIR}/akaifilehandler.h
        ${CMAKE_CURRENT_SOURCE_DIR}/midifilehandler.h
        ${CMAKE_CURRENT_SOURCE_DIR}/confirmbpmdialog.h
        ${CMAKE_CURRENT_SOURCE_DIR}/offlinetimestretcher.h
        ${CMAKE_CURRENT_SOURCE_DIR}/wavegraphicsscene.h
        ${CMAKE_CURRENT_SOURCE_DIR}/nonlib/nsm.h
        ${CMAKE_CURRENT_SOURCE_DIR}/nsmlistenerthread.h
        ${CMAKE_CURRENT_SOURCE_DIR}/jackoutputsdialog.h
        ${CMAKE_CURRENT_SOURCE_DIR}/sampleutils.h
        ${CMAKE_CURRENT_SOURCE_DIR}/calcbpmdialog.h)